--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,20 @@
 <resources>
-    <string name="app_name">Wi-bird</string>
-    <string name="title_activity_main">MainActivity</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Wi-bird</string>
+    <string name="title_activity_main">Wi-bird</string>
+    <string name="title_activity_control">Control Option</string>
+    <string name="title_activity_sensor">Sensor Values</string>
+    <string name="title_activity_velocity">Set Velocity</string>
+
+
     <string name="action_home">Home</string>
     <string name="action_net">Connect To</string>
+
     <string name="drawer_open">Select</string>
     <string name="drawer_close">Wi-bird</string>
+    <string name="title_activity_base">BaseActivity</string>
 
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+
 </resources>
