--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">Wi-bird</string>
     <string name="title_activity_main">Wi-bird</string>
     <string name="title_activity_control">Control Option</string>
-    <string name="title_activity_sensor">Sensor Values</string>
+    <!--<string name="title_activity_sensor">Sensor Values</string>-->
     <string name="title_activity_velocity">Set Velocity</string>
 
 
@@ -16,5 +16,35 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_device_list">DeviceListActivity</string>
+
+    <string name="action_connect">Connect</string>
+    <string name="action_disconnect">Disconnect</string>
+    <string name="action_help">Help</string>
+    <string name="title_activity_motion_control">MotionControl</string>
+    <string name="title_activity_gesture_motion_control">GestureMotionControl</string>
+    <string name="title_activity_sensor_reading">SensorReading</string>
+    <string name="title_activity_motion_control_fragment">MotionControlFragment</string>
+    <string name="title_activity_gesture_motion_control_fragment">GestureMotionControlFragment
+    </string>
+    <string name="title_activity_sensor_reading_fragment">SensorReadingFragment</string>
+    <string name="title_activity_motion">Motion</string>
+    <string name="title_activity_sensor">Sensor Values</string>
+    <string name="title_activity_gesture_control">GestureControl</string>
+    <string name="gesture_control">Gesture Control</string>
+
+    <!-- DeviceListActivity -->
+    <string name="select_device">select a device to connect</string>
+    <string name="none_paired">No devices have been paired</string>
+    <string name="title_paired_devices">Paired Devices</string>
+    <string name="gesture_mode">Gesture Mode</string>
+    <string name="custom_mode">Custom Mode</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="angle">Angle</string>
+
+    <!--ListView -->
+
 
 </resources>
